# VKDetect

./: CMakeLists.txt  README.md  VulkanInitializer.cpp  VulkanInitializer.h  main.cpp
